--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
 
 h1 {
   margin-top: 0;
+  text-align: center;
 }
 
 .container {
@@ -24,9 +25,11 @@ h1 {
   margin: 2em auto;
   padding: 2em;
   border: 1px solid #dee1e5;
-  width: 700px;
+  min-width: 250px;
+  max-width: 700px;
   background: #fff;
   border-radius: 5px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 /* Form */
@@ -35,8 +38,10 @@ h1 {
   box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
     rgba(17, 17, 26, 0.1) 0px 0px 8px;
   background-color: #b5caf9;
-  padding: 1em 5em;
+  padding: 1em 2em;
   border-radius: 5px;
+  width: 80%;
+  max-width: 400px;
 }
 
 .split-cotainer {
@@ -66,6 +71,57 @@ input[type="text"] {
   border-radius: 6px;
 }
 
+input[type="range"] {
+  background: linear-gradient(
+    to right,
+    #171b41 0%,
+    #171b41 50%,
+    #fff 50%,
+    #fff 100%
+  );
+
+  border-radius: 5px;
+  height: 7px;
+  width: 200px;
+  outline: none;
+  transition: background 450ms ease-in;
+  -webkit-appearance: none;
+  border: none;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+  /* -webkit-appearance: none; */
+  width: 100%;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  box-shadow: none;
+  border: 0px solid #ffffff;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.25);
+  height: 22px;
+  width: 12px;
+  border-radius: 22px;
+  background: rgba(255, 255, 255, 1);
+  -webkit-appearance: none;
+}
+
+/* Mozilla */
+
+input[type="range"]::-moz-range-thumb {
+  box-shadow: none;
+  border: 0px solid #ffffff;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.25);
+  height: 22px;
+  width: 12px;
+  border-radius: 22px;
+  background: rgba(255, 255, 255, 1);
+  -webkit-appearance: none;
+}
+
+input[type="range"]::-moz-focus-outer {
+  border: 0;
+}
+
 /* Code to copy */
 
 .code-container {
@@ -75,7 +131,10 @@ input[type="text"] {
   background: #171b41;
   color: #fff;
   border-radius: 5px;
-  width: 600px;
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
+    rgba(17, 17, 26, 0.1) 0px 0px 8px;
+  width: 80%;
+  max-width: 400px;
 }
 
 .code-title {
