--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ body {
 body {
   font-size: 25px;
   font-family: "Nunito", sans-serif;
-  background: #f5f6f7;
   color: #171b41;
+  background: #e8e9ea;
 }
 
 h1 {
@@ -17,7 +17,6 @@ h1 {
 }
 
 h3 {
-  margin-top: 0.7em;
   font-size: 1.5rem;
   text-transform: uppercase;
   font-weight: 400;
@@ -212,13 +211,20 @@ input[type="range"]::-moz-focus-outer {
     rgba(17, 17, 26, 0.1) 0px 0px 8px;
   width: 80%;
   text-align: center;
+  transition: all 250ms ease-in-out;
+  opacity: 0.9;
+}
+
+.inspiration:hover {
+  transform: scale(1.05);
+  opacity: 1;
 }
 
 .inspiration i {
   margin: 0 1em;
 }
 
-.inspiration-1 {
+/* .inspiration-1 {
   background: linear-gradient(90deg, #005aa7, #fffde4);
   color: #fff;
 }
@@ -242,15 +248,16 @@ input[type="range"]::-moz-focus-outer {
 
 .inspiration-6 {
   background-image: linear-gradient(132deg, #f4d03f, #16a085);
-}
+} */
 
 @media (min-width: 500px) {
   .container-inspiration {
     align-self: flex-start;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 0.5em;
-    max-width: 600px;
+    padding: 0;
+    padding-bottom: 0.5em;
+    max-width: 500px;
   }
 }
 
@@ -264,14 +271,10 @@ input[type="range"]::-moz-focus-outer {
     margin-right: 1em;
     min-width: 400px;
   }
-  /* 
+
   .container-inspiration {
-    align-self: flex-start;
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding: 0.5em;
-    max-width: 600px;
-  } */
+    padding-bottom: 1em;
+  }
 
   h3 {
     width: 100%;
