--- a/styles.css
+++ b/styles.css
@@ -144,8 +144,6 @@ input[type="text"] {
   -webkit-appearance: none;
 }
 
-/* Mozilla */
-
 input[type="range"]::-moz-range-thumb {
   box-shadow: none;
   border: 0px solid #ffffff;
@@ -161,7 +159,7 @@ input[type="range"]::-moz-focus-outer {
   border: 0;
 }
 
-/* Code to copy */
+/* Code section */
 
 .code-container {
   margin-top: 1em;
@@ -224,31 +222,11 @@ input[type="range"]::-moz-focus-outer {
   margin: 0 1em;
 }
 
-/* .inspiration-1 {
-  background: linear-gradient(90deg, #005aa7, #fffde4);
+.inspiration:nth-child(even) {
   color: #fff;
 }
 
-.inspiration-2 {
-  background: linear-gradient(270deg, #d9a7c7, #fffcdc);
-}
-
-.inspiration-3 {
-  background: linear-gradient(180deg, #44a08d, #093637);
-  color: #fff;
-}
-
-.inspiration-4 {
-  background: linear-gradient(0deg, #d9afd9, #97d9e1);
-}
-
-.inspiration-5 {
-  background-image: linear-gradient(19deg, #21d4fd, #b721ff);
-}
-
-.inspiration-6 {
-  background-image: linear-gradient(132deg, #f4d03f, #16a085);
-} */
+/* Media queries */
 
 @media (min-width: 500px) {
   .container-inspiration {
