--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,10 @@ h3 {
   font-weight: 400;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
 .container-main {
   display: flex;
   flex-direction: column;
@@ -233,7 +237,7 @@ input[type="range"]::-moz-focus-outer {
     align-self: flex-start;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 0;
+    padding: 0 1em;
     padding-bottom: 0.5em;
     max-width: 500px;
   }
@@ -251,6 +255,7 @@ input[type="range"]::-moz-focus-outer {
   }
 
   .container-inspiration {
+    padding: 0;
     padding-bottom: 1em;
   }
 
