--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
 }
 
 h1 {
+  font-size: 2.75rem;
   margin-top: 0;
   text-align: center;
 }
@@ -37,7 +38,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 1em auto;
+  margin: 0 auto 1em;
   padding: 2em;
   border: 1px solid #dee1e5;
   min-width: 250px;
@@ -237,13 +238,15 @@ input[type="range"]::-moz-focus-outer {
     align-self: flex-start;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 0 1em;
-    padding-bottom: 0.5em;
+    padding: 0.5em 2em;
     max-width: 500px;
   }
 }
 
 @media (min-width: 850px) {
+  .container-flex {
+    margin: 1em auto;
+  }
   .container-main {
     flex-direction: row;
     max-width: 1300px;
